2017-04-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2732: Raise javadoc memory limits for CACAO
	again!
	* NEWS: Updated.

2015-11-30  James Le Cuirot  <chewi@gentoo.org>

	PR2732: Raise javadoc memory limits for CACAO
	again!
	* patches/cacao/memory.patch: Increase memory
	limits so a build with CACAO and doc generation
	succeeds.

2017-04-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am,
	(CORBA_CHANGESET): Update to icedtea-2.6.10pre01.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to 2.6.10pre01.
	* hotspot.map.in: Update to icedtea-2.6.10pre01.
	* patches/boot/ecj-diamond.patch: Regenerated.
	* patches/rh1022017.patch: Likewise.

2017-04-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS: Add section for 2.6.10.
	* configure.ac: Bump to 2.6.10pre00.

2017-02-14  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* NEWS: Set release date to today.

2017-02-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	Bump to icedtea-2.6.9.
	* Makefile.am:
	(JDK_UPDATE_VERSION): Bump to 131.
	(CORBA_CHANGESET): Update to icedtea-2.6.9.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(install-data-local): Install blacklisted.certs.
	* NEWS: Updated.
	* configure.ac: Bump to 2.6.9.
	* hotspot.map.in: Update to icedtea-2.6.9.
	* patches/boot/ecj-diamond.patch:
	Regenerated. Add new cases in
	com.sun.jndi.cosnaming.CNCtx,